Added cookies for Merchant name and Category, Added feedback option

--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
           <ul>
             <li onclick="modalDataManage(0)">Services</li>
             <li onclick="modalDataManage(1)">Developers</li>
-            <li onclick="modalDataManage(2)">About us</li>
+            <li onclick="modalDataManage(2)">About</li>
+            <li onclick="modalDataManage(4)">Feedback</li>
           </ul>
         </div>
       </div>
