--- a/test.html
+++ b/test.html
@@ -6,17 +6,17 @@
         <style>
         body {
         background-color: #ffffff;
-        margin: 200px 40%;
       }
 
       form {
         background-color: #e3e3e3;
-        width: 300px;
-        height: 44px;
+        width: 100%;
+        height: 60px;
         border-radius: 5px;
         display:flex;
         flex-direction:row;
         align-items:center;
+        margin: 10%;
       }
 
       input {
