--- a/test.html
+++ b/test.html
@@ -6,6 +6,7 @@
         <style>
         body {
         background-color: #ffffff;
+            padding: 100px;
       }
 
       form {
@@ -16,7 +17,6 @@
         display:flex;
         flex-direction:row;
         align-items:center;
-        margin: 10%;
       }
 
       input {
