--- a/test.html
+++ b/test.html
@@ -2,6 +2,7 @@
 <html lang="en" class="">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Search Bar Demo</title>
         <style>
         body {
