--- a/test.html
+++ b/test.html
@@ -5,7 +5,49 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Search Bar Demo</title>
         <style>
-        
+        body {
+        background-color: #ffffff;
+            padding: 20px;
+      }
+
+      form {
+        background-color: #e3e3e3;
+        width: 100%;
+        height: 60px;
+        border-radius: 5px;
+        display:flex;
+        flex-direction:row;
+        align-items:center;
+      }
+
+      input {
+        all: unset;
+        font: 16px system-ui;
+        color: rgb(25, 25, 25);
+        height: 100%;
+        width: 100%;
+        padding: 6px 10px;
+      }
+
+      ::placeholder {
+        color: rgb(25, 25, 25);
+        opacity: 0.7; 
+      }
+
+      svg {
+        color: rgb(25, 25, 25);
+        fill: currentColor;
+        width: 24px;
+        height: 24px;
+        padding: 10px;
+      }
+
+      button {
+        all: unset;
+        cursor: pointer;
+        width: 44px;
+        height: 44px;
+      }
         </style>
     </head>
     <body>
