--- a/test.html
+++ b/test.html
@@ -51,7 +51,7 @@
         </style>
     </head>
     <body>
-        <form role="search" id="form">
+        <form role="search" id="form" autocomplete="off">
             <input
                 type="search"
                 id="query"
